objects/CustomerVisitKPI__c.object
<CustomObject>
    <description>This is for SLS53 report. TECH table to store the KPI details of Customer Visits aggregated per month per sales person</description>
    <fields>
        <fullName>DailyCount__c</fullName>
        <description>This is to capture the number of visits day wise</description>
        <inlineHelpText>This is to capture the number of visits day wise</inlineHelpText>
        <label>Daily Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventIdsList__c</fullName>
        <label>Event Ids List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>(CASE(MONTH(Date__c),1,&quot;Jan&quot;,2,&quot;Feb&quot;,3,&quot;Mar&quot;,4,&quot;April&quot;,5,&quot;May&quot;,6,&quot;June&quot;,7,&quot;July&quot;,8,&quot;Aug&quot;,9,&quot;Sep&quot;,10,&quot;Oct&quot;,11,&quot;Nov&quot;,&quot;Dec&quot;)   )&amp;  TEXT(YEAR(Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoofDayswithVisitsbetween0and2__c</fullName>
        <label>No.of days with visits &gt; 0 &amp; &lt;=2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoofDayswithVisitsgreaterthan2__c</fullName>
        <label>No.of days with visits &gt;2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isMonthlyRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be checked if the record captures visits for the entire month</description>
        <inlineHelpText>This will be checked if the record captures visits for the entire month</inlineHelpText>
        <label>IsMonthlyRecord</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Visit KPI</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CVL-{000000}</displayFormat>
        <label>Customer Visit KPI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Visit KPI</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>